Updated beer and merchitem models to include image_url field

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -116,7 +116,7 @@
       <!-- Back to Beers -->
       <div class="col-8 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4">
-          <img src="{{ random_beer.image.url }}" class="card-img-top border-black large-product-image mt-2"
+          <img src="{{ random_beer.image_url }}" class="card-img-top border-black large-product-image mt-2"
             alt="{{ random_beer.name }}">
           <div class="card-body p-0 my-3">
             <h5 class="card-title mb-2">Beers</h5>
@@ -127,7 +127,7 @@
       <!-- Back to Merch -->
       <div class="col-8 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4">
-          <img src="{{ random_merch.image.url }}" class="card-img-top border-black large-product-image mt-2"
+          <img src="{{ random_merch.image_url }}" class="card-img-top border-black large-product-image mt-2"
             alt="{{ random_merch.name }}">
           <div class="card-body p-0 my-3">
             <h5 class="card-title mb-2">Merch</h5>
