--- a/inventory/templates/inventory/beers.html
+++ b/inventory/templates/inventory/beers.html
@@ -16,7 +16,7 @@
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           {% if core_range_beer.image %}
           <!-- Display core range beer image if available -->
-          <img src="{{ core_range_beer.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ core_range_beer.name }}">
+          <img src="{{ core_range_beer.image_url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ core_range_beer.name }}">
           {% else %}
           <!-- Display placeholder image if core range beer image is not available -->
           <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="card-img-top border-black large-product-image mt-2" alt="{{ core_range_beer.name }}">
@@ -35,7 +35,7 @@
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           {% if limited_edition_beer.image %}
           <!-- Display limited edition beer image if available -->
-          <img src="{{ limited_edition_beer.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ limited_edition_beer.name }}">
+          <img src="{{ limited_edition_beer.image_url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ limited_edition_beer.name }}">
           {% else %}
           <!-- Display placeholder image if limited edition beer image is not available -->
           <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="card-img-top border-black large-product-image mt-2" alt="{{ limited_edition_beer.name }}">
@@ -97,7 +97,7 @@
           <div class="card border-0 align-items-center">
             {% if beer.image %}
             <!-- Display beer image if available -->
-            <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+            <img src="{{ beer.image_url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
             {% else %}
             <!-- Display placeholder image if beer image is not available -->
             <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
