--- a/pages/templates/pages/about.html
+++ b/pages/templates/pages/about.html
@@ -67,7 +67,7 @@
         <a href="{% url 'beer_detail' beer.id %}" class="text-black hover-gray">
           <div class="card border-0 align-items-center">
             {% if beer.image %}
-            <img src="{{ beer.image.url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
+            <img src="{{ beer.image_url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
             {% else %}
             <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
             {% endif %}
