--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -25,7 +25,7 @@
           <tr>
             <td class="p-3 col-4 col-md-3">
               {% if item.product.image %}
-              <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+              <img class="img-fluid rounded" src="{{ item.product.image_url }}">
               {% else %}
                 {% if item.item_type == 'beer' %}
                 <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="img-fluid rounded">
