--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -38,7 +38,7 @@
                             <td class="p-3 col-4 col-md-3">
                                 {% if item.product.image %}
                                 <!-- Display product image if available -->
-                                <img class="img-fluid rounded" src="{{ item.product.image.url }}">
+                                <img class="img-fluid rounded" src="{{ item.product.image_url }}">
                                 {% else %}
                                 {% if item.item_type == 'beer' %}
                                 <!-- Display default beer image if no image available -->
