--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -13,7 +13,7 @@
       <div class="col-8 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           {% if random_apparel.image %}
-          <img src="{{ random_apparel.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_apparel.name }}">
+          <img src="{{ random_apparel.image_url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_apparel.name }}">
           {% else %}
           <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black large-product-image mt-2" alt="{{ random_apparel.name }}">
           {% endif %}
@@ -28,7 +28,7 @@
       <div class="col-8 col-lg-5 col-xl-4 d-flex d-flex-column mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           {% if random_drinkware.image %}
-          <img src="{{ random_drinkware.image.url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_drinkware.name }}">
+          <img src="{{ random_drinkware.image_url }}" class="card-img-top border-black large-product-image mt-2" alt="{{ random_drinkware.name }}">
           {% else %}
           <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black large-product-image mt-2" alt="{{ random_drinkware.name }}">
           {% endif %}
