--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="overflow-hidden position-relative hero-section">
     <!-- Hero section with background image -->
-    <img src="/static/images/taproom/taproom-hero.jpg" alt="Taproom Hero Image" class="h-100 w-100 hero-image">
+    <img src="{% static 'images/taproom/taproom-hero.jpg' %}" alt="Taproom Hero Image" class="h-100 w-100 hero-image">
     <div class="position-absolute h-100 w-100"></div>
 </div>
 
@@ -30,11 +30,11 @@
 
 <div class="d-flex justify-content-center overflow-hidden position-relative height-fit-content gallery-section">
     <!-- Gallery section with taproom images -->
-    <img src="/static/images/taproom/taproom4.jpg" alt="Taproom Image 4"
+    <img src="{% static 'images/taproom/taproom4.jpg' %}" alt="Taproom Image 4"
         class="h-100 d-none d-lg-inline-block col-lg-4 mx-0 px-0 gallery-image">
-    <img src="/static/images/taproom/taproom5.jpg" alt="Taproom Image 5"
+    <img src="{% static 'images/taproom/taproom5.jpg' %}" alt="Taproom Image 5"
         class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
-    <img src="/static/images/taproom/taproom6.jpg" alt="Taproom Image 6"
+    <img src="{% static 'images/taproom/taproom6.jpg' %}" alt="Taproom Image 6"
         class="h-100 d-inline-block col-6 col-lg-4 mx-0 px-0 gallery-image">
 </div>
 
