Updated add/edit beer and merch forms to fix the image field error

--- a/inventory/templates/inventory/beer_detail.html
+++ b/inventory/templates/inventory/beer_detail.html
@@ -11,7 +11,7 @@
       <!-- Left Column: Beer Image -->
       <div class="col-12 col-lg-5 col-xl-4 d-flex d-flex-column px-5 px-lg-0 mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
-          {% if beer.image %}
+          {% if beer.image_url %}
           <!-- Display beer image if available -->
           <img src="{{ beer.image_url }}" class="card-img-top border-black large-product-image" alt="{{ beer.name }}">
           {% else %}
@@ -71,7 +71,7 @@
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <a href="{% url 'beer_detail' beer.id %}" class="text-black hover-gray">
           <div class="card border-0 align-items-center">
-            {% if beer.image %}
+            {% if beer.image_url %}
             <!-- Display beer image if available -->
             <img src="{{ beer.image_url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
             {% else %}
