--- a/pages/templates/pages/orders_and_returns.html
+++ b/pages/templates/pages/orders_and_returns.html
@@ -63,7 +63,7 @@
             <li>
                 <h5>Return Process:</h5>
                 <ul>
-                    <li>To initiate a return, please contact us at support@alchemyaleworks.com to obtain a Return Merchandise Authorization (RMA) number.</li>
+                    <li>To initiate a return, please contact us at support@alchemyaleworks.com to obtain a Return Merchandise Authorisation (RMA) number.</li>
                     <li>Pack the item securely and include the RMA number on the package.</li>
                     <li>Return shipping costs are the responsibility of the customer, except in cases of damaged or faulty items.</li>
                 </ul>
