--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -24,7 +24,7 @@
       {% for beer in limited_edition_beers %}
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <div class="card border-0 align-items-center">
-          {% if beer.image %}
+          {% if beer.image_url %}
           <img src="{{ beer.image_url }}" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
           {% else %}
           <img src="{{ MEDIA_URL }}beers/no-beer.webp" class="card-img-top border-black my-2 product-image" alt="{{ beer.name }}">
@@ -79,7 +79,7 @@
       {% for merch_item in random_merch_items %}
       <div class="col-12 col-sm-6 col-md-4 h-100 product-container p-0 mx-4 mb-4 {% if forloop.counter > 2 %}d-none d-lg-flex{% endif %}">
         <div class="card border-0 align-items-center bg-gray">
-          {% if merch_item.image %}
+          {% if merch_item.image_url %}
           <img src="{{ merch_item.image_url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
           {% else %}
           <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
