--- a/inventory/templates/inventory/merch.html
+++ b/inventory/templates/inventory/merch.html
@@ -77,7 +77,7 @@
         <a href="{% url 'merch_detail' merch_item.id %}" class="text-black hover-gray mx-4">
           <div class="card border-0 align-items-center">
             <!-- Display merch item image or default image -->
-            {% if merch_item.image %}
+            {% if merch_item.image_url %}
             <img src="{{ merch_item.image_url }}" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
             {% else %}
             <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black my-2 product-image" alt="{{ merch_item.name }}">
