--- a/inventory/templates/inventory/merch_detail.html
+++ b/inventory/templates/inventory/merch_detail.html
@@ -11,7 +11,7 @@
       <div class="col-12 col-lg-5 col-xl-4 d-flex d-flex-column px-5 px-lg-0 mx-sm-4 h-100 large-product-container">
         <div class="card border-0 align-items-center w-100 mb-4 bg-gray">
           <!-- Display merch item image or default image -->
-          {% if merch.image %}
+          {% if merch.image_url %}
           <img src="{{ merch.image_url }}" class="card-img-top border-black large-product-image" alt="{{ merch.name }}">
           {% else %}
           <img src="{{ MEDIA_URL }}merch/no-merch.webp" class="card-img-top border-black large-product-image"
@@ -91,7 +91,7 @@
         <a href="{% url 'merch_detail' merch.id %}" class="text-black hover-gray">
           <div class="card border-0 align-items-center">
             <!-- Display merch item image or default image -->
-            {% if merch.image %}
+            {% if merch.image_url %}
             <img src="{{ merch.image_url }}" class="card-img-top border-black my-2 product-image"
               alt="{{ merch.name }}">
             {% else %}
