Updated styling for 404 page

--- a/templates/errors/404.html
+++ b/templates/errors/404.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="col-12 col-lg-6 offset-lg-3 p-3">
-    <div class="order-confirmation-wrapper p-2 border-black text-black">
+    <div class="order-confirmation-wrapper p-2 text-center text-black">
         <p>
             Looks like you've ventured into uncharted ale-chemy territory! Don't worry, take a sip from your favourite
             brew and head back to our main menu to keep exploring our magical concoctions.
