Made adjustments to base.html after reviewing validator checks

--- a/templates/base.html
+++ b/templates/base.html
@@ -126,11 +126,11 @@
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
           <!-- Mobile Nav Toggler -->
           <li class="list-inline-item p-0 m-0 d-lg-none">
-            <a class="navbar-toggler text-black nav-link" type="button" data-toggle="collapse"
+            <button class="navbar-toggler text-black nav-link" type="button" data-toggle="collapse"
               data-target="#navbarToggleMobileMenu" aria-controls="navbarToggleMobileMenu" aria-expanded="false"
               aria-label="Toggle navigation">
               <i class="fa-solid fa-bars fa-lg"></i>
-            </a>
+            </button>
           </li>
 
           <!-- Search, Accounts & Cart -->
@@ -348,7 +348,7 @@
       </div>
 
       <!-- Contact Us (Large Screen Sizes) -->
-      <div class="col-4 mt-5 p-0 d-none d-lg-flex justify-content-center" id="contact-us">
+      <div class="col-4 mt-5 p-0 d-none d-lg-flex justify-content-center" id="contact-us-lg">
         <div class="container width-fit-content">
           <div class="footer-heading">
             <h4 class="text-uppercase">Contact Us</h4>
