--- a/inventory/templates/inventory/add_merch.html
+++ b/inventory/templates/inventory/add_merch.html
@@ -47,7 +47,7 @@
 {% block end_js %}
     <!-- Extend base.js scripts -->
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         // JavaScript to handle image file change event
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
