--- a/inventory/templates/inventory/edit_merch.html
+++ b/inventory/templates/inventory/edit_merch.html
@@ -48,7 +48,7 @@
     <!-- Include base.js from parent block -->
     {{ block.super }}
     <!-- JavaScript for handling image file selection -->
-    <script type="text/javascript">
+    <script>
         $('#new-image').change(function() {
             var file = $('#new-image')[0].files[0];
             $('#filename').text(`Image will be set to: ${file.name}`);
