--- a/pages/templates/pages/taproom.html
+++ b/pages/templates/pages/taproom.html
@@ -75,7 +75,7 @@
             <div class="col-12 col-md-6 order-md-1 p-0">
                 <!-- Google Maps iframe showing location -->
                 <div class="p-0" id="map-content">
-                    <iframe height="500" class="w-100 border-0"
+                    <iframe title="Google Maps" height="500" class="w-100 border-0"
                         referrerpolicy="no-referrer-when-downgrade"
                         src="https://www.google.com/maps/embed/v1/place?key={{ GOOGLE_MAPS_API_KEY }}&q=HD11AA+England"
                         allowfullscreen>
